# movie_tickets

./: README.md  package.json  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: router.js
frontend/src/pages/: BookingConfirmation.vue  Home.vue  MoviList.vue  MovieDetail.vue  StripePayment.vue
movie_tickets/: hooks.py  payment.py
movie_tickets/api/: api.py
movie_tickets/movie_tickets/doctype/movie/: movie.js  movie.json  movie.py  test_movie.py
movie_tickets/movie_tickets/doctype/movie_theater/: movie_theater.js  movie_theater.json  movie_theater.py  test_movie_theater.py
movie_tickets/movie_tickets/doctype/payment/: payment.js  payment.json  payment.py  test_payment.py
movie_tickets/movie_tickets/doctype/theater_show/: test_theater_show.py  theater_show.js  theater_show.json  theater_show.py
movie_tickets/movie_tickets/doctype/ticket_booking/: test_ticket_booking.py  ticket_booking.js  ticket_booking.json  ticket_booking.py
