[project]
name = "movie_tickets"
authors = [
    { name = "touseeef hussain", email = "touseefhussainlqp@gmail.com"}
]
description = "frappe ui"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "stripe ~= 10.5.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
 "stripe ~= 10.5.0",
